--- a/3-promo/index.html
+++ b/3-promo/index.html
@@ -2,6 +2,11 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
+    <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta content="telephone=no" name="format-detection" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="x-apple-disable-message-reformatting">
     <title>HTML Academy: PlayHTML. Акция</title>
   </head>
   <body>
