--- a/3-promo/index.html
+++ b/3-promo/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta content="telephone=no" name="format-detection" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title></title>
+    <title>Сложный шаблон письма интернет-магазина</title>
   </head>
   <body>
 
