--- a/3-promo/index.html
+++ b/3-promo/index.html
@@ -424,6 +424,14 @@ PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD
              </tr>
            </table>
 
+
+
+           <!--Пустая таблица-разделитель между блоками-->
+           <table cellpadding="0" cellspacing="0" border="0" width="600" align="center"
+                bgcolor="#F6F6F6" style="padding-top: 20px; padding-bottom: 20px; padding-right: 0px; ">
+           </table>
+
+
            <table cellpadding="0" cellspacing="0" border="0" width="600" align="center"
                 bgcolor="#ffffff" style="padding-top: 0px; padding-bottom: 0px; padding-right: 0px; border-radius: 20px 20px 0px 0px; ">
                 <tr>
@@ -479,6 +487,13 @@ PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD
                     </td>
                    </tr>
             </table>
+
+
+            <!--Пустая таблица-разделитель между блоками-->
+           <table cellpadding="0" cellspacing="0" border="0" width="600" align="center"
+                bgcolor="#F6F6F6" style="padding-top: 20px; padding-bottom: 20px; padding-right: 0px; ">
+           </table>
+
 
 
             <!--Популярные курсы-->
@@ -727,7 +742,16 @@ PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD
                   </td>
                 </tr>
             </table>
-                
+
+
+            <!--Пустая таблица-разделитель между блоками-->
+           <table cellpadding="0" cellspacing="0" border="0" width="600" align="center"
+                bgcolor="#F6F6F6" style="padding-top: 20px; padding-bottom: 20px; padding-right: 0px; ">
+           </table>
+
+
+
+             
         <!--Подвал-->
             <table cellpadding="0" cellspacing="0" border="0" width="600" align="center"
             bgcolor="#FFFFFF" style="padding-top: 0px; padding-bottom: 0px; padding-right: 0px;">
