--- a/5/2-welcome/index.html
+++ b/5/2-welcome/index.html
@@ -143,24 +143,29 @@ PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD
                     style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-spacing:0px;float:left;">
                     <tr>
                       <td align="left" style="padding:0;Margin:0;width:298px;">
-                        <table cellpadding="0" cellspacing="0" width="100%"
-                          style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-spacing:0px;">
+                        <table cellpadding="0" cellspacing="0" class="content-left" align="left"
+                          style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-spacing:0px;float:left;">
                           <tr>
-                            <td align="left" style="padding:0;Margin:0;padding-top:25px; color: #13D6C3; padding-left:32px;">
-                               <p><b>Здравствуйте, {{name}} </b></p>
+                            <td align="left" style="padding:0;Margin:0;width:298px; padding-left:32px">
+                              <table cellpadding="0" cellspacing="0" width="100%"
+                               style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-spacing:0px;">
+                                <tr>
+                                  <td align="left" style="padding:0;Margin:0;padding-top:25px; color: #13D6C3;">
+                                    <p><b>Здравствуйте, {{name}} </b></p>
+                                  </td>
+                                </tr>
+                                <tr>
+                                  <td align="left" style="padding:0;Margin:0;padding-top:0px; color: #FFFFFF;">
+                                    <p> <span> Благодарим вас за регистрацию на курс «Начальный html+css».</span> </p>
+                                  </td>
+                                </tr>
+                                <tr>
+                                  <td align="left" style="padding:0;Margin:0;padding-top:0px; color: #FFFFFF;">
+                                    <p> Курс стартует 1 июля в 17.00 по московскому времени. Письма со ссылками для входа в кабинет придут на указанную почту за день до старта курса.</p>
+                                  </td>
+                                </tr>
+                              </table>
                             </td>
-                          </tr>
-                          <tr>
-                            <td align="left" style="padding:0;Margin:0;padding-top:0px; color: #FFFFFF; padding-left:32px;">
-                               <p> <span> Благодарим вас за регистрацию на курс «Начальный html+css».</span> </p>
-                            </td>
-                          </tr>
-                          <tr>
-                             <td align="left" style="padding:0;Margin:0;padding-top:0px; color: #FFFFFF; padding-left:32px;">
-                                <p>
-                                  Курс стартует 1 июля в 17.00 по московскому времени. Письма со ссылками для входа в кабинет придут на указанную почту за день до старта курса.
-                                </p>
-                             </td>
                           </tr>
                         </table>
                       </td>
