--- a/1-invitation/index.html
+++ b/1-invitation/index.html
@@ -413,14 +413,14 @@ PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD
                       <td width="100" align="left" align="top"
                       style="padding-top: 0px; padding-bottom: 10px; padding-right: 0px; padding-left: 0px;">
                       <p style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-size:14px;font-family:'trebuchet ms', tahoma, sans-serif;line-height:16px;color:#13D6C3;">
-                        <a href="#" target="_blank">study@htmlacademy.ru</a>
+                        <a style="color: #13D6C3;" href="#" target="_blank">study@htmlacademy.ru</a>
                       </td>
                     </tr>
                     <tr>
                       <td width="100" align="left" align="top"
                       style="padding-top: 0px; padding-bottom: 10px; padding-right: 0px; padding-left: 0px;">
                       <p style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-size:14px;font-family:'trebuchet ms', tahoma, sans-serif;line-height:16px;color:#13D6C3;">
-                        <a href="#" target="_blank">8-800-690-76-68</a>
+                        <a style="color: #13D6C3;" href="#" target="_blank">8-800-690-76-68</a>
                       </td>
                     </tr>
                             </table>
@@ -445,7 +445,7 @@ PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD
                       <td width="100" align="left" align="top"
                       style="padding-top: 0px; padding-bottom: 8px; padding-right: 0px; padding-left: 0px;">
                         <p style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-size:14px;font-family:'trebuchet ms', tahoma, sans-serif;line-height:16px;color:#141414;">
-                          <a href="#" target="_blank"><u>Бесплатные вебинары</u></a>
+                          <a style="color: #141414;" href="#" target="_blank"><u>Бесплатные вебинары</u></a>
                         </p>
                       </td>
                     </tr>
@@ -453,28 +453,28 @@ PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD
                       <td width="100" align="left" align="top"
                       style="padding-top: 0px; padding-bottom: 8px; padding-right: 0px; padding-left: 0px;">
                       <p style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-size:14px;font-family:'trebuchet ms', tahoma, sans-serif;line-height:16px;color:#141414;">
-                        <a href="#" target="_blank"><u>Обучающие курсы</u></a>
+                        <a style="color: #141414;" href="#" target="_blank"><u>Обучающие курсы</u></a>
                       </td>
                     </tr>
                     <tr>
                       <td width="100" align="left" align="top"
                       style="padding-top: 0px; padding-bottom: 8px; padding-right: 0px; padding-left: 0px;">
                       <p style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-size:14px;font-family:'trebuchet ms', tahoma, sans-serif;line-height:16px;color:#141414;">
-                        <a href="#" target="_blank"><u>Тесты</u></a>
+                        <a style="color: #141414;" href="#" target="_blank"><u>Тесты</u></a>
                       </td>
                     </tr>
                     <tr>
                       <td width="100" align="left" align="top"
                       style="padding-top: 0px; padding-bottom: 8px; padding-right: 0px; padding-left: 0px;">
                       <p style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-size:14px;font-family:'trebuchet ms', tahoma, sans-serif;line-height:16px;color:#141414;">
-                        <a href="#" target="_blank"><u>Наш блог</u></a>
+                        <a style="color: #141414;" href="#" target="_blank"><u>Наш блог</u></a>
                       </td>
                     </tr>
                     <tr>
                       <td width="100" align="left" align="top"
                       style="padding-top: 0px; padding-bottom: 8px; padding-right: 0px; padding-left: 0px;">
                       <p style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-size:14px;font-family:'trebuchet ms', tahoma, sans-serif;line-height:16px;color:#141414;">
-                        <a href="#" target="_blank"><u>Истории студентов</u></a>
+                        <a style="color: #141414;" href="#" target="_blank"><u>Истории студентов</u></a>
                       </td>
                     </tr>
                             </table>
