--- a/1-invitation/index.html
+++ b/1-invitation/index.html
@@ -39,8 +39,8 @@ PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD
                   <table bgcolor="#ffffff" class="content-body" align="center" cellpadding="0" cellspacing="0"
                   style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-spacing:0px;background-color:#FFFFFF;width:600px;">
                     <tr>
-                      <td align="center" style="Margin:0;padding-top:15px;padding-bottom:15px;padding-left:25px;padding-right:25px;font-size:0px;">
-                      <img src="https://img.reg.ru/news/logo.png" alt="transavia.ru" width="196" height="35"/>
+                      <td align="center" style="Margin:0;padding-top:33px;padding-bottom:15px;padding-left:25px;padding-right:25px;font-size:0px;">
+                      <img src="https://raw.githubusercontent.com/AnastasiaRaykhel/2174317-play-html-1/module2-task2/1-invitation/img/logo.png" alt="Logo" width="140" height="24" style="display:block;border:0;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic" />
                       </td>
                     </tr>
                   </table>
@@ -125,7 +125,7 @@ PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD
                     </tr>
                   </table>
                 </td>
-                <td align="left" bgcolor="#C4C4C4" style="padding:0;Margin:0;background-color:#C4C4C4; ">
+                <td align="left" bgcolor="#FFFFFF" style="padding:0;Margin:0;background-color:#FFFFFF; ">
                   <!--[if mso]></td><td style="width:0px;"></td><td style="width:301px;" valign="top"><![endif]-->
                   <table cellpadding="0" cellspacing="0" class="content-right" align="right" 
                   style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-spacing:0px;float:right;">
@@ -134,7 +134,7 @@ PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD
                         style="padding:0;Margin:0;width:352px;padding-top:15px;">
                         <table cellpadding="0" cellspacing="0" width="100%" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-spacing:0px;">
                           <tr>
-                            <td align="center" style="padding:0;Margin:0;font-size:0px;"><a target="_blank" href="https://#"><img src="1pic.png" alt="Croods Sitting" width="230" title="Croods Sitting" /></a>
+                            <td align="center" style="padding:0;Margin:0;font-size:0px;"><img src="https://raw.githubusercontent.com/AnastasiaRaykhel/2174317-play-html-1/module2-task2/1-invitation/img/1ban.png" alt="Croods Sitting" width="352" style="display:block;border:0;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic">
                             </td>
                           </tr>
                         </table>
@@ -195,7 +195,7 @@ PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD
                 <tr>
                   <td width="30" align="left" align="top"
                     style="padding-top: 0px; padding-bottom: 0px; padding-right: 0px; padding-left: 20px;">
-                    <img src="https://img.reg.ru/news/product_category.png" alt="Кто такой frontend-разработчик?" width="12" height="12" />
+                    <img src="https://raw.githubusercontent.com/AnastasiaRaykhel/2174317-play-html-1/module2-task2/1-invitation/img/Ellipse%201.png" alt="Кто такой frontend-разработчик?" width="12" height="12" style="display:block;border:0;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic" />
                   </td>
                   <td align="left" align="top"
                     style="padding-top: 0px; padding-bottom: 0px; padding-right: 0px; color:#FFFFFF">
@@ -210,7 +210,7 @@ PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD
                 <tr>
                   <td width="30" align="left" align="top"
                     style="padding-top: 0px; padding-bottom: 0px; padding-right: 0px; padding-left: 20px;">
-                    <img src="https://img.reg.ru/news/product_category.png" alt="Какие навыки сейчас востребованы?" width="12" height="12" />
+                    <img src="https://raw.githubusercontent.com/AnastasiaRaykhel/2174317-play-html-1/module2-task2/1-invitation/img/Polygon%201.png" alt="Какие навыки сейчас востребованы?" width="12" height="12" style="display:block;border:0;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic" />
                   </td>
                   <td align="left"
                     style="padding-top: 0px; padding-bottom: 0px; padding-right: 0px; color:#FFFFFF">
@@ -225,7 +225,7 @@ PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD
                 <tr>
                   <td width="30" align="left" align="top"
                     style="padding-top: 0px; padding-bottom: 0px; padding-right: 0px; padding-left: 20px;">
-                    <img src="https://img.reg.ru/news/product_category.png" alt="Как устроиться в компанию после обучения?" width="12" height="12" />
+                    <img src="https://raw.githubusercontent.com/AnastasiaRaykhel/2174317-play-html-1/module2-task2/1-invitation/img/Rectangle%2019.png" alt="Как устроиться в компанию после обучения?" width="12" height="12" style="display:block;border:0;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic" />
                   </td>
                   <td align="left"
                     style="padding-top: 0px; padding-bottom: 0px; padding-right: 0px; color:#FFFFFF">
@@ -256,7 +256,7 @@ PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD
                     <tr>
                       <td width="100" align="center" align="top"
                       style="padding-top: 0px; padding-bottom: 0px; padding-right: 0px; padding-left: 0px;">
-                        <img src="https://img.reg.ru/news/middle_bg_slide_2.png" alt="иван Васильев" width="88" height="88" />
+                        <img src="https://raw.githubusercontent.com/AnastasiaRaykhel/2174317-play-html-1/module2-task2/1-invitation/img/portrait1.png" alt="иван Васильев" width="88" height="88" style="display:block;border:0;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic"/>
                       </td>
                     </tr>
                   </table>
@@ -264,7 +264,7 @@ PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD
                   bgcolor="#FFFFFF" style="padding-top: 0px; padding-bottom: 0px; padding-right: 0px;">
                     <tr>
                       <td width="100" align="center" align="top"
-                       style="padding-top: 0px; padding-bottom: 0px; padding-right: 0px; padding-left: 0px;">
+                       style="padding-top: 12px; padding-bottom: 0px; padding-right: 0px; padding-left: 0px;">
                         <p style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-size:18px;font-family:'trebuchet ms', tahoma, sans-serif;line-height:21px;color:#141414;">
                           <b>Иван Васильев</b></p>
                       </td>
@@ -296,7 +296,7 @@ PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD
                     <tr>
                       <td width="100" align="center" align="top"
                       style="padding-top: 0px; padding-bottom: 0px; padding-right: 0px; padding-left: 0px;">
-                        <img src="https://img.reg.ru/news/middle_bg_slide_2.png" alt="Croods Proposal" width="278" height="278" />
+                        <img src="https://raw.githubusercontent.com/AnastasiaRaykhel/2174317-play-html-1/module2-task2/1-invitation/img/Croods%20Proposal.png" alt="Croods Proposal" width="278" height="278" style="display:block;border:0;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic" />
                       </td>
                     </tr>
                   </table>
@@ -387,15 +387,15 @@ PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD
 
                                     style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-spacing:0px;">
                                           <td align="center" valign="top" style="padding:0;Margin:0;padding-right:10px;"><a target="_blank" href="https://#"><img
-                                            title="Facebook" src="https://img.reg.ru/news/middle_icon_facebook.png" width="32"/></a>
+                                            title="Facebook" src="https://raw.githubusercontent.com/AnastasiaRaykhel/2174317-play-html-1/module2-task2/1-invitation/img/facebook.png" width="32" style="display:block;border:0;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic" /></a>
                                           </td>
-                                          <td align="center" valign="top" style="padding:0;Margin:0;padding-right:10px;"><a target="_blank" href="https://#"><img title="Instagram" src="https://img.reg.ru/news/middle_icon_instagram.png" width="32"/></a>
+                                          <td align="center" valign="top" style="padding:0;Margin:0;padding-right:10px;"><a target="_blank" href="https://#"><img title="Instagram" src="https://raw.githubusercontent.com/AnastasiaRaykhel/2174317-play-html-1/module2-task2/1-invitation/img/inst.png" width="32" style="display:block;border:0;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic" /></a>
                                           </td>
-                                          <td align="center" valign="top" style="padding:0;Margin:0;padding-right:10px;"><a target="_blank" href="https://#"><img title="Youtube" src="https://img.reg.ru/news/middle_icon_youtube.png" width="32"/></a>
+                                          <td align="center" valign="top" style="padding:0;Margin:0;padding-right:10px;"><a target="_blank" href="https://#"><img title="Youtube" src="https://raw.githubusercontent.com/AnastasiaRaykhel/2174317-play-html-1/module2-task2/1-invitation/img/youtube.png" width="32" style="display:block;border:0;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic" /></a>
                                           </td>
-                                          <td align="center" valign="top" style="padding:0;Margin:0;padding-right:10px;"><a target="_blank" href="https://#"><img title="Telegram" src="https://img.reg.ru/news/middle_icon_telegram.png" width="32"/></a>
+                                          <td align="center" valign="top" style="padding:0;Margin:0;padding-right:10px;"><a target="_blank" href="https://#"><img title="Telegram" src="https://raw.githubusercontent.com/AnastasiaRaykhel/2174317-play-html-1/module2-task2/1-invitation/img/telegram.png" width="32" style="display:block;border:0;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic" /></a>
                                           </td>
-                                         <td align="center" valign="top" style="padding:0;Margin:0;padding-right:10px;"><a target="_blank" href="https://#"><img title="Vkontakte" src="https://img.reg.ru/news/middle_icon_vk.png" width="32"/></a>
+                                         <td align="center" valign="top" style="padding:0;Margin:0;padding-right:10px;"><a target="_blank" href="https://#"><img title="Vkontakte" src="https://raw.githubusercontent.com/AnastasiaRaykhel/2174317-play-html-1/module2-task2/1-invitation/img/vk.png" width="32" style="display:block;border:0;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic" /></a>
                                           </td>
                                   </table>
                                 </td>
