--- a/2-welcome/index.html
+++ b/2-welcome/index.html
@@ -28,14 +28,14 @@ PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD
             <!--Логотип-->
             <table width="100%" cellspacing="0" cellpadding="0" border="0">
               <tr>
-                <td align="left" style="Margin:0;padding-left:20px;padding-right:20px;padding-top:25px;padding-bottom:25px;">
+                <td align="left" style="Margin:0;padding-left:20px;padding-right:20px;padding-top:25px;padding-bottom:56px;">
                   <table width="100%" cellspacing="0" cellpadding="0" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-spacing:0px;">
                     <tr>
                       <td valign="top" align="center" style="padding:0;Margin:0;width:560px;">
                         <table width="100%" cellspacing="0" cellpadding="0" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-spacing:0px;">
                           <tr>
                             <td align="center" style="padding:0;Margin:0;font-size:0px;"><a target="_blank" href="https://texttile.ru">
-                              <img src="https://img.reg.ru/news/midle_logo.png" alt="Лого" width="200" height="80" /> </a>
+                              <img src="https://raw.githubusercontent.com/AnastasiaRaykhel/2174317-play-html-1/module2-task2/2-welcome/img/logo%20(1).png" alt="Лого" width="140" height="24" style="display:block;border:0;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic" /> </a>
                             </td>
                           </tr>
                         </table>
@@ -179,8 +179,8 @@ PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD
                         style="padding:0;Margin:0;width:175px;padding-top:15px;">
                         <table cellpadding="0" cellspacing="0" width="100%" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-spacing:0px;">
                           <tr>
-                            <td align="center" style="padding:0;Margin:0;font-size:0px;">
-                              <a target="_blank" href="https://#"> <img src="https://img.reg.ru/news/middle_bg_slide_2.png" alt="Croods Standing" width="175" height="269" /> </a>
+                            <td align="center" style="padding:0;Margin:0;font-size:0px; padding-right: 32px;">
+                               <img src="https://raw.githubusercontent.com/AnastasiaRaykhel/2174317-play-html-1/module2-task2/2-welcome/img/Croods%20Standing.png" alt="Croods Standing" width="175" height="269" style="display:block;border:0;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic" /> 
                             </td>
                           </tr>
                         </table>
@@ -287,9 +287,9 @@ PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD
                                     <td width="178" align="center" bgcolor=""
                                       style="padding-top: 15px; padding-bottom: 15px;">
                                       <a href="#"
-                                        target="_blank"><img src="portrait2.png" alt="Антон Громов"
+                                        target="_blank"><img src="https://raw.githubusercontent.com/AnastasiaRaykhel/2174317-play-html-1/module2-task2/2-welcome/img/portrait2.png" alt="Антон Громов"
                                           width="88" height="88" 
-                                          style="display: block;"></a>
+                                          style="display:block;border:0;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic"></a>
                                     </td>
                                   </tr>
                                 </table>
@@ -334,9 +334,9 @@ PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD
                                     <td width="178" align="center" bgcolor=""
                                       style="padding-top: 15px; padding-bottom: 15px;">
                                       <a href="#"
-                                        target="_blank"><img src="portrait3.png" alt="Илья Раменский"
+                                        target="_blank"><img src="https://raw.githubusercontent.com/AnastasiaRaykhel/2174317-play-html-1/module2-task2/2-welcome/img/portrait3.png" alt="Илья Раменский"
                                           width="88" height="88" 
-                                          style="display: block;"></a>
+                                          style="display:block;border:0;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic"></a>
                                     </td>
                                   </tr>
                                 </table>
@@ -382,9 +382,9 @@ PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD
                                     <td width="178" align="center" bgcolor=""
                                       style="padding-top: 15px; padding-bottom: 15px;">
                                       <a href="#"
-                                        target="_blank"><img src="portrait4.png" alt="Игнатий Чубаров"
+                                        target="_blank"><img src="https://raw.githubusercontent.com/AnastasiaRaykhel/2174317-play-html-1/module2-task2/2-welcome/img/portrait4.png" alt="Игнатий Чубаров"
                                           width="88" height="88" 
-                                          style="display: block;"></a>
+                                          style="display:block;border:0;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic"></a>
                                     </td>
                                   </tr>
                                 </table>
@@ -681,11 +681,11 @@ PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD
                           <tr>
                           </table>
                           <table cellpadding="0" cellspacing="0" border="0" width="273.4px" align="center"
-                             bgcolor="#FFFFFFF" style="padding-top: 0px; padding-bottom: 0px; padding-right: 0px;">
+                             bgcolor="#FFFFFF" style="padding-top: 0px; padding-bottom: 0px; padding-right: 0px;">
                              <tr>
                                 <td width="273.4px" align="center" valign="top"
                                    style="padding-top: 0px; padding-bottom: 0px; padding-right: 0px; ">
-                                  <a  target="_blank"><img src="Croods Keeping in Touch.jpeg" width="273.4px" style="display: block;"></a>
+                                  <img src="https://raw.githubusercontent.com/AnastasiaRaykhel/2174317-play-html-1/module2-task2/2-welcome/img/Croods%20Keeping%20in%20Touch.png" width="273.4px" style="display:block;border:0;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic">
                                </td>
                              </tr>
                          </table>
@@ -708,7 +708,7 @@ PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD
                 <table bgcolor="#f6f6f6" class="content-body" align="center" cellpadding="0" cellspacing="0" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-spacing:0px;background-color:#f6f6f6;width:600px;">
                   <tr>
                     <td align="left" bgcolor="#FFFFFF"
-                      style="Margin:0;padding-bottom:10px;padding-top:25px;padding-left:30px;padding-right:50px;background-color:#3A3F4а;">
+                      style="Margin:0;padding-bottom:10px;padding-top:0px;padding-left:30px;padding-right:50px;background-color:#3A3F4а;">
                       <!--[if mso]><table style="width:540px;" cellpadding="0" cellspacing="0"><tr><td style="width:133px;" valign="top"><![endif]-->
                       
                       <table cellpadding="0" cellspacing="0" class="content-left" align="left"
@@ -729,15 +729,15 @@ PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD
 
                                     style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-spacing:0px;">
                                           <td align="center" valign="top" style="padding:0;Margin:0;padding-right:10px;"><a target="_blank" href="https://#"><img
-                                            title="Facebook" src="https://img.reg.ru/news/middle_icon_facebook.png" width="32"/></a>
+                                            title="Facebook" src="https://raw.githubusercontent.com/AnastasiaRaykhel/2174317-play-html-1/module2-task2/2-welcome/img/facebook.png" width="24" style="display:block;border:0;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic"/></a>
                                           </td>
-                                          <td align="center" valign="top" style="padding:0;Margin:0;padding-right:10px;"><a target="_blank" href="https://#"><img title="Instagram" src="https://img.reg.ru/news/middle_icon_instagram.png" width="32"/></a>
+                                          <td align="center" valign="top" style="padding:0;Margin:0;padding-right:10px;"><a target="_blank" href="https://#"><img title="Instagram" src="https://raw.githubusercontent.com/AnastasiaRaykhel/2174317-play-html-1/module2-task2/2-welcome/img/inst.png" width="24" style="display:block;border:0;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic" /></a>
                                           </td>
-                                          <td align="center" valign="top" style="padding:0;Margin:0;padding-right:10px;"><a target="_blank" href="https://#"><img title="Youtube" src="https://img.reg.ru/news/middle_icon_youtube.png" width="32"/></a>
+                                          <td align="center" valign="top" style="padding:0;Margin:0;padding-right:10px;"><a target="_blank" href="https://#"><img title="Youtube" src="https://raw.githubusercontent.com/AnastasiaRaykhel/2174317-play-html-1/module2-task2/2-welcome/img/youtube.png" width="24" style="display:block;border:0;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic" /></a>
                                           </td>
-                                          <td align="center" valign="top" style="padding:0;Margin:0;padding-right:10px;"><a target="_blank" href="https://#"><img title="Telegram" src="https://img.reg.ru/news/middle_icon_telegram.png" width="32"/></a>
+                                          <td align="center" valign="top" style="padding:0;Margin:0;padding-right:10px;"><a target="_blank" href="https://#"><img title="Telegram" src="https://raw.githubusercontent.com/AnastasiaRaykhel/2174317-play-html-1/module2-task2/2-welcome/img/telegram.png" width="24" style="display:block;border:0;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic" /></a>
                                           </td>
-                                         <td align="center" valign="top" style="padding:0;Margin:0;padding-right:10px;"><a target="_blank" href="https://#"><img title="Vkontakte" src="https://img.reg.ru/news/middle_icon_vk.png" width="32"/></a>
+                                         <td align="center" valign="top" style="padding:0;Margin:0;padding-right:10px;"><a target="_blank" href="https://#"><img title="Vkontakte" src="https://raw.githubusercontent.com/AnastasiaRaykhel/2174317-play-html-1/module2-task2/2-welcome/img/vk.png" width="24" style="display:block;border:0;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic" /></a>
                                           </td>
                                   </table>
                                 </td>
