Убрала из названий изображений пробелы и пр. символы

--- a/1-invitation/index.html
+++ b/1-invitation/index.html
@@ -134,7 +134,7 @@ PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD
                         style="padding:0;Margin:0;width:352px;padding-top:15px;">
                         <table cellpadding="0" cellspacing="0" width="100%" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-spacing:0px;">
                           <tr>
-                            <td align="center" style="padding:0;Margin:0;font-size:0px;"><img src="https://raw.githubusercontent.com/AnastasiaRaykhel/2174317-play-html-1/module2-task2/1-invitation/img/1ban.png" alt="Croods Sitting" width="352" style="display:block;border:0;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic">
+                            <td align="center" style="padding:0;Margin:0;font-size:0px;"><img src="https://raw.githubusercontent.com/AnastasiaRaykhel/2174317-play-html-1/module3-task1/1-invitation/img/1ban.png" alt="CroodsSitting" width="352" style="display:block;border:0;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic">
                             </td>
                           </tr>
                         </table>
@@ -195,7 +195,7 @@ PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD
                 <tr>
                   <td width="30" align="left" align="top"
                     style="padding-top: 0px; padding-bottom: 0px; padding-right: 0px; padding-left: 20px;">
-                    <img src="https://raw.githubusercontent.com/AnastasiaRaykhel/2174317-play-html-1/module2-task2/1-invitation/img/Ellipse%201.png" alt="Кто такой frontend-разработчик?" width="12" height="12" style="display:block;border:0;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic" />
+                    <img src="https://raw.githubusercontent.com/AnastasiaRaykhel/2174317-play-html-1/module3-task1/1-invitation/img/Ellipse1.png" alt="Кто такой frontend-разработчик?" width="12" height="12" style="display:block;border:0;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic" />
                   </td>
                   <td align="left" align="top"
                     style="padding-top: 0px; padding-bottom: 0px; padding-right: 0px; color:#FFFFFF">
@@ -210,7 +210,7 @@ PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD
                 <tr>
                   <td width="30" align="left" align="top"
                     style="padding-top: 0px; padding-bottom: 0px; padding-right: 0px; padding-left: 20px;">
-                    <img src="https://raw.githubusercontent.com/AnastasiaRaykhel/2174317-play-html-1/module2-task2/1-invitation/img/Polygon%201.png" alt="Какие навыки сейчас востребованы?" width="12" height="12" style="display:block;border:0;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic" />
+                    <img src="https://raw.githubusercontent.com/AnastasiaRaykhel/2174317-play-html-1/module3-task1/1-invitation/img/Polygon1.png" alt="Какие навыки сейчас востребованы?" width="12" height="12" style="display:block;border:0;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic" />
                   </td>
                   <td align="left"
                     style="padding-top: 0px; padding-bottom: 0px; padding-right: 0px; color:#FFFFFF">
@@ -225,7 +225,7 @@ PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD
                 <tr>
                   <td width="30" align="left" align="top"
                     style="padding-top: 0px; padding-bottom: 0px; padding-right: 0px; padding-left: 20px;">
-                    <img src="https://raw.githubusercontent.com/AnastasiaRaykhel/2174317-play-html-1/module2-task2/1-invitation/img/Rectangle%2019.png" alt="Как устроиться в компанию после обучения?" width="12" height="12" style="display:block;border:0;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic" />
+                    <img src="https://raw.githubusercontent.com/AnastasiaRaykhel/2174317-play-html-1/module3-task1/1-invitation/img/Rectangle19.png" alt="Как устроиться в компанию после обучения?" width="12" height="12" style="display:block;border:0;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic" />
                   </td>
                   <td align="left"
                     style="padding-top: 0px; padding-bottom: 0px; padding-right: 0px; color:#FFFFFF">
@@ -296,7 +296,7 @@ PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD
                     <tr>
                       <td width="100" align="center" align="top"
                       style="padding-top: 0px; padding-bottom: 0px; padding-right: 0px; padding-left: 0px;">
-                        <img src="https://raw.githubusercontent.com/AnastasiaRaykhel/2174317-play-html-1/module2-task2/1-invitation/img/Croods%20Proposal.png" alt="Croods Proposal" width="278" height="278" style="display:block;border:0;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic" />
+                        <img src="https://raw.githubusercontent.com/AnastasiaRaykhel/2174317-play-html-1/module3-task1/1-invitation/img/CroodsProposal.png" alt="CroodsProposal" width="278" height="278" style="display:block;border:0;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic" />
                       </td>
                     </tr>
                   </table>
