--- a/2-welcome/index.html
+++ b/2-welcome/index.html
@@ -34,8 +34,8 @@ PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD
                       <td valign="top" align="center" style="padding:0;Margin:0;width:560px;">
                         <table width="100%" cellspacing="0" cellpadding="0" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-spacing:0px;">
                           <tr>
-                            <td align="center" style="padding:0;Margin:0;font-size:0px;"><a target="_blank" href="https://texttile.ru">
-                              <img src="https://raw.githubusercontent.com/AnastasiaRaykhel/2174317-play-html-1/module2-task2/2-welcome/img/logo%20(1).png" alt="Лого" width="140" height="24" style="display:block;border:0;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic" /> </a>
+                            <td align="center" style="padding:0;Margin:0;font-size:0px;">
+                              <img src="https://raw.githubusercontent.com/AnastasiaRaykhel/2174317-play-html-1/module3-task1/2-welcome/img/logo1.png" alt="Лого" width="140" height="24" style="display:block;border:0;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic" />
                             </td>
                           </tr>
                         </table>
@@ -180,7 +180,7 @@ PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD
                         <table cellpadding="0" cellspacing="0" width="100%" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-spacing:0px;">
                           <tr>
                             <td align="center" style="padding:0;Margin:0;font-size:0px; padding-right: 32px;">
-                               <img src="https://raw.githubusercontent.com/AnastasiaRaykhel/2174317-play-html-1/module2-task2/2-welcome/img/Croods%20Standing.png" alt="Croods Standing" width="175" height="269" style="display:block;border:0;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic" /> 
+                               <img src="https://raw.githubusercontent.com/AnastasiaRaykhel/2174317-play-html-1/module3-task1/2-welcome/img/CroodsStanding.png" alt="CroodsStanding" width="175" height="269" style="display:block;border:0;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic" /> 
                             </td>
                           </tr>
                         </table>
@@ -685,7 +685,7 @@ PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD
                              <tr>
                                 <td width="273.4px" align="center" valign="top"
                                    style="padding-top: 0px; padding-bottom: 0px; padding-right: 0px; ">
-                                  <img src="https://raw.githubusercontent.com/AnastasiaRaykhel/2174317-play-html-1/module2-task2/2-welcome/img/Croods%20Keeping%20in%20Touch.png" width="273.4px" style="display:block;border:0;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic">
+                                  <img src="https://raw.githubusercontent.com/AnastasiaRaykhel/2174317-play-html-1/module3-task1/2-welcome/img/CroodsKeepinginTouch.png" alt="CroodsKeepinginTouch" width="273.4px" style="display:block;border:0;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic">
                                </td>
                              </tr>
                          </table>
