--- a/3-promo/index.html
+++ b/3-promo/index.html
@@ -39,7 +39,7 @@ PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD
                                style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-spacing:0px;">
                                  <tr>
                                    <td align="center" style="padding:0;Margin:0;font-size:0px; padding-bottom: 20px; padding-right:150px;"> <img
-                                       src="https://raw.githubusercontent.com/AnastasiaRaykhel/2174317-play-html-1/module2-task2/3-promo/img/logo%20(2).png" alt="Лого"
+                                       src="https://raw.githubusercontent.com/AnastasiaRaykhel/2174317-play-html-1/module3-task1/3-promo/img/logo.png" alt="Лого"
                                        width="140" title="Лого" style="display:block;border:0;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic"/></a>
                                    </td>
                                  </tr>
@@ -171,7 +171,7 @@ PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD
                         style="padding:0;Margin:0;width:284px;padding-top:15px; height: 271px; background-color:#FFFFFF; padding-right: 15px; padding-left: 15px;" >
                         <table cellpadding="0" cellspacing="0" width="100%" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-spacing:0px;">
                           <tr>
-                            <td align="center" style="padding:0;Margin:0;font-size:0px;"><img src="https://raw.githubusercontent.com/AnastasiaRaykhel/2174317-play-html-1/module2-task2/3-promo/img/Croods%20Party%20Time.png" alt="Croods Sitting" width="284" height="271" title="Croods Sitting" style="display:block;border:0;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic"/>
+                            <td align="center" style="padding:0;Margin:0;font-size:0px;"><img src="https://raw.githubusercontent.com/AnastasiaRaykhel/2174317-play-html-1/module3-task1/3-promo/img/CroodsPartyTime.png" alt="CroodsPartyTime" width="284" height="271" title="Croods Sitting" style="display:block;border:0;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic"/>
                             </td>
                           </tr>
                         </table>
@@ -213,7 +213,7 @@ PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD
                               <tbody>
                               <tr>
                                 <td align="center" style="padding:0;Margin:0;font-size:0px;">
-                                  <img src="https://raw.githubusercontent.com/AnastasiaRaykhel/2174317-play-html-1/module2-task2/3-promo/img/image%207.png" aalt="Html+css начальный" width="122" height="75" style="display:block;border:0;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic">
+                                  <img src="https://raw.githubusercontent.com/AnastasiaRaykhel/2174317-play-html-1/module3-task1/3-promo/img/image7.png" aalt="Html+css начальный" width="122" height="75" style="display:block;border:0;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic">
                                 </td>
                               </tr>
                               <tr>
@@ -256,7 +256,7 @@ PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD
                                 <tbody>
                               <tr>
                                 <td align="center" style="padding:0;Margin:0;font-size:0px;">
-                                  <img src="https://raw.githubusercontent.com/AnastasiaRaykhel/2174317-play-html-1/module2-task2/3-promo/img/image%2013.png" aalt="Html+css продвинутый" width="100" height="100" style="display:block;border:0;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic">
+                                  <img src="https://raw.githubusercontent.com/AnastasiaRaykhel/2174317-play-html-1/module3-task1/3-promo/img/image13.png" aalt="Html+css продвинутый" width="100" height="100" style="display:block;border:0;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic">
                                 </td>
                               </tr>
                               <tr>
@@ -304,7 +304,7 @@ PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD
                                 <tbody>
                               <tr>
                                 <td align="center" style="padding:0;Margin:0;font-size:0px;">
-                                  <img src="https://raw.githubusercontent.com/AnastasiaRaykhel/2174317-play-html-1/module2-task2/3-promo/img/adobe-photoshop%201.png" alt="Photoshop для верстальщика" width="110" height="110" style="display:block;border:0;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic">
+                                  <img src="https://raw.githubusercontent.com/AnastasiaRaykhel/2174317-play-html-1/module3-task1/3-promo/img/adobephotoshop1.png" alt="Photoshop для верстальщика" width="110" height="110" style="display:block;border:0;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic">
                                 </td>
                               </tr>
                               <tr>
@@ -345,7 +345,7 @@ PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD
                                 <tbody>
                               <tr>
                                 <td align="center" style="padding:0;Margin:0;font-size:0px;">
-                                  <img src="https://raw.githubusercontent.com/AnastasiaRaykhel/2174317-play-html-1/module2-task2/3-promo/img/image%2015.png" alt="JS начальный" width="74" height="83" style="display:block;border:0;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic">
+                                  <img src="https://raw.githubusercontent.com/AnastasiaRaykhel/2174317-play-html-1/module3-task1/3-promo/img/image15.png" alt="JS начальный" width="74" height="83" style="display:block;border:0;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic">
                                 </td>
                               </tr>
                               <tr>
@@ -653,7 +653,7 @@ PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD
                     <table cellpadding="0" cellspacing="0" border="0" width="300" align="center" bgcolor="#FFFFFF" style="padding-top: 0px; padding-bottom: 0px; padding-right: 0px;">
                     <tr>
                       <td width="300" height="300" align="center" valign="top"style="padding-top: 0px; padding-bottom: 0px; padding-right: 0px; ">
-                          <a  target="_blank"><img src="https://raw.githubusercontent.com/AnastasiaRaykhel/2174317-play-html-1/module2-task2/3-promo/img/Croods%20The%20Feedback.png" width="300" style="display:block;border:0;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic"></a>
+                          <a  target="_blank"><img src="https://raw.githubusercontent.com/AnastasiaRaykhel/2174317-play-html-1/module3-task1/3-promo/img/CroodsTheFeedback.png" alt="CroodsTheFeedback" width="300" style="display:block;border:0;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic"></a>
                       </td>
                     </tr>
                 </table>
