Поправила адаптацию в шапке

--- a/2-welcome/index.html
+++ b/2-welcome/index.html
@@ -51,6 +51,18 @@ PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD
       }
     }
 
+.content-left,
+      .content-right {
+        width: 100% !important
+      }
+
+      .content table,
+      .content {
+        width: 100% !important;
+        max-width: 600px !important
+      }
+    }
+
     #outlook a {
       padding: 0;
     }
@@ -73,6 +85,7 @@ PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD
 
     .mobile-content-p20b {
         padding-bottom: 20px !important;
+
     }
 
      .mobile-content-center {
@@ -83,6 +96,10 @@ PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD
         padding-left: 30px !important;
 
       }
+
+      .mobile-100 {
+        width: 100% !important;
+
 }
 
   </style>
@@ -97,28 +114,24 @@ PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD
       <table class="content-wrapper" width="100%" cellspacing="0" cellpadding="0" border="0">
         <tr>
           <td align="center" style="padding:0;Margin:0;">
-            <table bgcolor="#FFFFFF" align="center" cellpadding="0" cellspacing="0" border="0">
+
+            <table  bgcolor="#FFFFFF" align="center" cellpadding="0" cellspacing="0" border="0">
               <tr>
                 <td align="center" style="padding:0;Margin:0;">
                   <table bgcolor="#FFFFFF" align="center" cellpadding="0" cellspacing="0"
-                  style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-spacing:0px;background-color:#FFFFFF; width:600px;">
+                  style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-spacing:0px;background-color:#FFFFFF;width:100%;">
                   <tr>
                     <td>
 
             <!--Логотип-->
-            <table width="100%" cellspacing="0" cellpadding="0" border="0">
+            <table align="center" width="100%" cellspacing="0" cellpadding="0" border="0">
               <tr>
-                <td align="left" style="Margin:0;padding-left:20px;padding-right:20px;padding-top:25px;padding-bottom:56px;">
-                  <table width="100%" cellspacing="0" cellpadding="0" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-spacing:0px;">
+                <td>
+                  <table bgcolor="#ffffff" class="content-body" align="center" cellpadding="0" cellspacing="0"
+                  style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-spacing:0px;background-color:#FFFFFF;width:100%;">
                     <tr>
-                      <td valign="top" align="center" style="padding:0;Margin:0;width:560px;">
-                        <table width="100%" cellspacing="0" cellpadding="0" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-spacing:0px;">
-                          <tr>
-                            <td align="center" style="padding:0;Margin:0;font-size:0px;">
-                              <img src="https://raw.githubusercontent.com/AnastasiaRaykhel/2174317-play-html-1/module3-task1/2-welcome/img/logo1.png" alt="Лого" width="140" height="24" style="display:block;border:0;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic" />
-                            </td>
-                          </tr>
-                        </table>
+                      <td  align="center" style="Margin:0;padding-top:56px;padding-bottom:56px;padding-left:25px;padding-right:25px;font-size:0px; width:100%;">
+                          <img src="https://raw.githubusercontent.com/AnastasiaRaykhel/2174317-play-html-1/module3-task1/2-welcome/img/logo1.png" alt="Лого" width="140" height="24" style="display:block;border:0;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic" />
                       </td>
                     </tr>
                   </table>
