--- a/1-invitation/index.html
+++ b/1-invitation/index.html
@@ -51,6 +51,18 @@ PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD
       }
     }
     
+    .content-left,
+      .content-right {
+        width: 100% !important
+      }
+
+      .content table,
+      .content {
+        width: 100% !important;
+        max-width: 600px !important
+      }
+    }
+
     #outlook a {
       padding: 0;
     }
@@ -81,7 +93,7 @@ PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD
               <td align="center" style="padding:0;Margin:0;">
 
             <!--Блок со ссылкой на веб-версию-->
-            <table class="content-body" align="center" cellpadding="0" cellspacing="0" bgcolor="#ffffff" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-spacing:0px;background-color:#FFFFFF;width:600px;">
+            <table class="content-body" align="center" cellpadding="0" cellspacing="0" bgcolor="#ffffff" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-spacing:0px;background-color:#FFFFFF;width:100%;">
               <tr>
                 <td align="center" bgcolor="#f6f6f6" style="Margin:0;padding-top:15px;padding-bottom:15px;padding-left:25px;padding-right:25px;background-color:#F6F6F6;">
                   <p style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-size:12px;font-family:'trebuchet ms', tahoma, sans-serif;line-height:18px;color:#333333;">
@@ -97,7 +109,7 @@ PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD
               <tr>
                 <td>
                   <table bgcolor="#ffffff" class="content-body" align="center" cellpadding="0" cellspacing="0"
-                  style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-spacing:0px;background-color:#FFFFFF;width:600px;">
+                  style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-spacing:0px;background-color:#FFFFFF;width:100%;">
                     <tr>
                       <td align="center" style="Margin:0;padding-top:33px;padding-bottom:15px;padding-left:25px;padding-right:25px;font-size:0px;">
                       <img src="https://raw.githubusercontent.com/AnastasiaRaykhel/2174317-play-html-1/module2-task2/1-invitation/img/logo.png" alt="Logo" width="140" height="24" style="display:block;border:0;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic" />
